# based-sdk

./: .gitignore  AGENTS.md  CMakeLists.txt  HOW_TO_BUILD.md  HOW_TO_USE_SDK.md  README.md  THIRD_PARTY.md  TODO.md  api_index.txt  log.txt
core/: AGENTS.md  CMakeLists.txt  api_index.txt
core/include/: based_core.h
core/include/basic/: assert.h  codespace.h  entry.h  entry_impl.h  env_defines.h  intrinsics.h  keyword_defines.h  primitive_types.h  profiler.h  safe.h  third_party.h  utility_defines.h
core/include/containers/: binary_tree.h  bitset.h  doubly_list.h  hash_map.h  ring_list.h  singly_list.h  sort.h  stack_list.h  tree.h
core/include/context/: ctx.h  global_ctx.h  thread_ctx.h
core/include/filesystem/: archive.h  directory.h  file.h  filemap.h  filestream.h  module.h  path.h  pathinfo.h  pathwatch.h
core/include/input/: bindings.h  camera.h  capture.h  clipboard.h  devices.h  gamepads.h  input_state.h  keyboard.h  mouse.h  msg.h  msg_core.h  sensor.h  tablet.h  touch.h
core/include/interface/: monitor.h
core/include/memory/: allocator.h  arena.h  buffer.h  heap.h  memops.h  pool.h  ring.h  scratch.h  vmem.h
core/include/processes/: common_processes.h  pipe.h  process.h  process_current.h
core/include/strings/: char.h  cstrings.h  strings.h  unicode.h
core/include/system/: cpu_info.h  system_info.h  system_runtime.h
core/include/threads/: atomics.h  condvar.h  mutex.h  rwlock.h  semaphore.h  spinlock.h  thread.h  thread_current.h  thread_group.h
core/include/utils/: cmdline.h  crc.h  digits.h  endian.h  id.h  log_state.h  random_series.h  stacktrace.h  timer.h  timestamp.h  uuid.h  version.h
core/include/windowing/: dialog.h  monitor.h  window.h
core/src/: internal.h  sdl3_include.h
core/src/basic/: assert.c  entry.c  intrinsics.c  log.c
core/src/containers/: hash_map.c  sort.c
core/src/context/: ctx.c  global_ctx.c  thread_ctx.c
core/src/filesystem/: archive.c  directory.c  file.c  filemap.c  filestream.c  path.c  pathinfo.c  pathwatch.c
core/src/input/: bindings.c  camera.c  capture.c  clipboard.c  devices.c  gamepads.c  input_state.c  keyboard.c  mouse.c  msg.c  msg_core.c  sensor.c  tablet.c  touch.c
core/src/memory/: arena.c  buffer.c  heap.c  memops.c  pool.c  scratch.c  vmem.c
core/src/processes/: common_processes.c  process.c  process_current.c
core/src/strings/: char.c  cstrings.c  strings.c  unicode.c
core/src/system/: cpu_info.c
core/src/threads/: atomics.c  condvar.c  mutex.c  rwlock.c  thread.c  thread_current.c  thread_group.c
core/src/utils/: cmdline.c  crc.c  digits.c  endian.c  id.c  log_state.c  random_series.c  stacktrace.c  timer.c  timestamp.c  uuid.c  version.c
core/src/windowing/: dialog.c  monitor.c  window.c
core/tests/: test_common.hpp  test_main.cpp
core/tests/basic/: codespace_test.cpp  env_defines_test.cpp  intrinsics_test.cpp  keyword_defines_test.cpp  utility_defines_test.cpp
core/tests/containers/: bitset_test.cpp  hash_map_test.cpp  ring_list_test.cpp  stack_list_test.cpp  tree_test.cpp
core/tests/context/: global_ctx_test.cpp
core/tests/filesystem/: archive_test.cpp  file_test.cpp  filemap_test.cpp  module_test.cpp  path_test.cpp  pathinfo_test.cpp  pathwatch_test.cpp
core/tests/input/: camera_test.cpp  clipboard_test.cpp  devices_test.cpp  gamepads_test.cpp  keyboard_test.cpp  mouse_test.cpp  msg_core_test.cpp  msg_test.cpp  sensor_test.cpp  tablet_test.cpp  touch_test.cpp
core/tests/memory/: buffer_test.cpp  memops_test.cpp  ring_test.cpp  scratch_test.cpp  vmem_test.cpp
core/tests/processes/: pipe_test.cpp  process_current_test.cpp
core/tests/strings/: char_test.cpp  cstrings_test.cpp  strings_test.cpp  unicode_test.cpp
core/tests/system/: system_info_test.cpp  system_runtime_test.cpp
core/tests/threads/: atomics_test.cpp  condvar_test.cpp  mutex_test.cpp  rwlock_test.cpp  semaphore_test.cpp  spinlock_test.cpp  thread_group_test.cpp  thread_test.cpp
core/tests/utils/: crc_test.cpp  digits_test.cpp  id_test.cpp  log_state_test.cpp  random_series_test.cpp  timestamp_test.cpp  uuid_test.cpp  version_test.cpp
core/tests/windowing/: window_test.cpp
modules/core/: AGENTS.md  CMakeLists.txt  DOC.md  api_index.txt
modules/core/include/: based_core.h
modules/core/include/basic/: crash.h  env_defines.h  keyword_defines.h  primitive_types.h  utility_defines.h
modules/core/include/containers/: singly_list.h  stack_list.h
modules/core/include/context/: ctx.h  global_ctx.h
modules/core/include/filesystem/: pathwatch.h
modules/core/include/input/: audio_device.h  camera.h  devices.h  gamepads.h  joystick.h  keyboard.h  mouse.h  msg.h  msg_core.h  sensor.h  tablet.h  touch.h
modules/core/include/memory/: alloc_tracker.h  allocator.h
modules/core/include/processes/: process.h
modules/core/include/strings/: cstrings.h  unicode.h
modules/core/include/system/: cpu_info.h
modules/core/include/utils/: log_state.h  timer.h
modules/core/src/: internal.h  platform_includes.h
modules/core/src/basic/: assert.c  crash.c  entry.c  intrinsics.c
modules/core/src/context/: ctx.c  global_ctx.c
modules/core/src/filesystem/: pathwatch.c
modules/core/src/input/: audio_device.c  camera.c  devices.c  gamepads.c  joystick.c  keyboard.c  mouse.c  msg.c  native_backend.c  sensor.c  tablet.c  touch.c
modules/core/src/interface/: window.c
modules/core/src/memory/: alloc_tracker.c  allocator.c  arena.c  heap.c  pool.c  vmem.c
modules/core/src/processes/: process.c  process_current.c
modules/core/src/strings/: cstrings.c  unicode.c
modules/core/src/system/: cpu_info.c  system_info.c  system_runtime.c
modules/core/src/threads/: spinlock.c  thread.c  thread_current.c
modules/core/src/utils/: huffman.c  log_state.c  stacktrace.c
modules/core/tests/: app_entry_standalone.cpp  mod_entry_standalone.cpp  run_entry_standalone.cpp  test_main.cpp
modules/core/tests/basic/: crash_test.cpp  env_defines_test.cpp  keyword_defines_test.cpp
modules/core/tests/context/: global_ctx_test.cpp  (+1 more)
modules/gfx/: AGENTS.md  CMakeLists.txt  DOC.md  api_index.txt
(+221 files in other folders)
